#709: Modified to use CustomerTypeLogic